--- a/TM.Wedding.UI/tm-wedding-ui/src/index.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/index.html
@@ -10,6 +10,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+  <style id="css_variables">
+    :root {
+        --ff-main: 'Poppins', sans-serif;
+        --ff-secondary: 'Raleway', sans-serif;
+    }
+  </style>
 </head>
 <body>
   <app-root></app-root>
