--- a/TM.Wedding.UI/tm-wedding-ui/src/index.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/index.html
@@ -14,6 +14,8 @@
     :root {
         --ff-main: 'Poppins', sans-serif;
         --ff-secondary: 'Raleway', sans-serif;
+        --white-color: #dec89d;
+        --dark-color: black;
     }
   </style>
 </head>
